// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aside Aside - should match snapshot 1`] = `
<div
  className=" "
>
  <div>
    <div>
      <div>
        <Component>
          Category
        </Component>
        <p>
          None
        </p>
      </div>
    </div>
    <div>
      <div>
        <Component>
          Destop Integration
        </Component>
        <Component
          key="Identity Check"
        >
          Identity Check
        </Component>
        <Component
          key="Property Marketing Information"
        >
          Property Marketing Information
        </Component>
        <Component
          key="Vendor Marketing Report"
        >
          Vendor Marketing Report
        </Component>
        <Component
          key="Property Details Generation"
        >
          Property Details Generation
        </Component>
        <Component
          key="Applicant Export"
        >
          Applicant Export
        </Component>
        <Component
          key="Property"
        >
          Property
        </Component>
        <Component
          key="Applicant"
        >
          Applicant
        </Component>
      </div>
    </div>
    <Component
      header="Private App"
    >
      No
    </Component>
    <Component
      header="Direct API"
    >
      No
    </Component>
    <Component
      header="Status"
    >
      Not Listed
    </Component>
    <Component
      appDetailState={
        Object {
          "data": Object {
            "description": "enim facilisis",
            "developer": "Pete's Proptech World Ltd",
            "homePage": "http://myawesomeproptechproduct.io",
            "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
            "media": Array [
              Object {
                "description": "Application Icon",
                "type": "icon",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
              },
            ],
            "name": "Peter's Properties",
            "scopes": Array [
              Object {
                "description": "Read data about developers",
                "name": "Marketplace/developers.read",
              },
              Object {
                "description": "Write data about developers",
                "name": "Marketplace/developers.write",
              },
            ],
            "summary": "vitae elementum curabitur vitae",
            "supportEmail": "support@reapit.com",
            "telephone": "0113 288 2900",
          },
        }
      }
      id="9b6fd5f7-2c15-483d-b925-01b650538e52"
      pendingRevisions={false}
    />
  </div>
</div>
`;

exports[`Aside ManageApp - should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "developerAppDetailRoute",
          "pathname": "/developer/apps/:appid",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "developerAppDetailRoute",
              "pathname": "/developer/apps/:appid",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "developerAppDetailRoute",
            "pathname": "/developer/apps/:appid",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Component
        appDetailState={
          Object {
            "data": Object {
              "description": "enim facilisis",
              "developer": "Pete's Proptech World Ltd",
              "homePage": "http://myawesomeproptechproduct.io",
              "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
              "media": Array [
                Object {
                  "description": "Application Icon",
                  "type": "icon",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
                },
              ],
              "name": "Peter's Properties",
              "scopes": Array [
                Object {
                  "description": "Read data about developers",
                  "name": "Marketplace/developers.read",
                },
                Object {
                  "description": "Write data about developers",
                  "name": "Marketplace/developers.write",
                },
              ],
              "summary": "vitae elementum curabitur vitae",
              "supportEmail": "support@reapit.com",
              "telephone": "0113 288 2900",
            },
          }
        }
        id="test"
        pendingRevisions={false}
      >
        <Component
          header="Manage App"
        >
          <div
            data-test=""
          >
            <Component>
              <h5
                className="title is-5  "
                id=""
              >
                Manage App
              </h5>
            </Component>
            <div>
              <Component
                className="mb-3"
                dataTest="detail-modal-edit-button"
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                <button
                  className="button mb-3 is-primary  "
                  data-test="detail-modal-edit-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  EDIT DETAILS
                </button>
              </Component>
              <Component
                className="w-100"
                onClick={[Function]}
                variant="danger"
              >
                <button
                  className="button w-100 is-danger  "
                  data-test=""
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  DELETE APP
                </button>
              </Component>
            </div>
          </div>
        </Component>
      </Component>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`Aside renderListedStatus should render listed if isListed = false 1`] = `
<div>
  Not Listed
</div>
`;

exports[`Aside renderListedStatus should render listed if isListed = true 1`] = `
<div>
  <div>
    Listed 
    <FaCheck />
  </div>
</div>
`;
